fix clipping images

--- a/docs/css/project.css
+++ b/docs/css/project.css
@@ -141,6 +141,7 @@ article img {
     border: 2px solid var(--main-border-color);
     overflow: hidden;
     max-height: 80vh;
+    max-width: 100%;
 }
 
 article a {
